add_library(tinymuduo
        Thread.cc
        Acceptor.cc
        Buffer.cc
        Channel.cc
        EventLoop.cc
        InetAddr.cc
        Poll.cc
        TcpConnection.cc
        TcpServer.cc
        ThreadPoll.cc
        Log.cc
        TcpClient.cc
        Connector.cc
        CircularQueue.cc
)